--- a/style.css
+++ b/style.css
@@ -11,58 +11,17 @@ body {
 body, html {
     height: 100%;
 }
-  
-.bg-image {
-    background-image: url("background.jpg");
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-    height: 100%;
-    background-position: relative;
-    background-repeat: no-repeat;
-    background-size: auto;
-}
 
 .bg-text {
     background-color: white;
     color: black;
-    position: absolute;
-    display: block;
-    top: 30%;
+    position: fixed;
+    bottom: 55%;
     width: 100%;
     filter: blur(0px);
     -webkit-filter: blur(0px);
     padding: 20px;
     text-align: center;
-}
-
-.bg-text2 {
-    background-color: white;
-    color: black;
-    position: absolute;
-    display: block;
-    width: 100%;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-    padding: 20px;
-    text-align: center;
-}
-
-.bg-text3 {
-    background-color: white;
-    color: black;
-    position: absolute;
-    display: block;
-    width: 100%;
-    bottom: 0%;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-    padding: 20px;
-    text-align: center;
-}
-
-.nav {
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
 }
 
 .index {
@@ -71,4 +30,10 @@ body, html {
 
 .index2 {
     color: black;
+}
+
+#foot {
+    position: fixed;
+    bottom: 0; 
+    width: 100%;
 }
